# lgtv-control

./: back+pause.cmd  back.cmd  pyproject.toml  screen_off.cmd  screen_on.cmd
lgtv/: run_command.py
