[tool.poetry]
name = "lgtv-control"
version = "0.1.0"
description = ""
authors = ["Sam West <samuelwest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pywebostv = "^0.8.8"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
